--- a/style.css
+++ b/style.css
@@ -25,38 +25,89 @@
     width: 100px;
     height: 100px;
     background: red;
-    transition: 1s;
+    transition: 3s;
 }
 .ex-3-square:hover{
     border-radius: 100%;
 }
 
-
-
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
+}
+.ex-4-square:hover{
+    opacity: 0;
 }
 .ex-5-square {
     margin: 20px;
     width: 60px;
     height: 60px;
     background: red;
+    transition:2s;
+}
+.ex-5-square:hover{
+   transform:scale(4)
+}
+.ex-5-square:active{
+    transform:scale(0.5)
+   
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+.ex-7-img{
+    transition: 2s;
+}
 
+.ex-7-img:hover{
+    filter: blur(50%) saturate(30%);
+}
+.ex-8-img{
+    transition: 2s;
+}
+.ex-8-img:hover{
+    filter: grayscale(100%) opacity(30%) ;
+    border-radius: 30%;
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: 2s;
+}
+.ex-9-img:hover{
+    filter: grayscale(100%) opacity(30%) ;
+    border-radius: 30%;
+    transform: scale(2);
 }
 .ex-10-icon {
     font-size: 60px;
+    animation: rotazione 5s infinite;
+}
+@keyframes rotazione{
+    0%{
+        transform: rotate(360deg);
+    }
 }
 .ex-11-icon {
     font-size: 60px;
+    animation: rotazione2 4s linear;
+}
+@keyframes rotazione2{
+    0% {
+        transform: rotate(0);
+    }
+    90% {
+        transform: rotate(290deg);
+    }
+    100% {
+        transform: rotate(0);
+    }
+
 }
 .ex-12-button, .ex-13-button {
     position: relative;
@@ -86,4 +137,97 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+
+.ex-12-button:hover .ex-12-top-white {
+    animation: buttonwhite 2s linear;
+}
+
+@keyframes buttonwhite{
+    0%{
+        left: 10%;
+    }
+
+    50%{
+        left: 50%;
+    }
+
+    100%{
+        left: 10%;
+    }
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: buttonwhite1 2s linear;
+}
+
+@keyframes buttonwhite1{
+    0%{
+        right: 20%;
+    }
+
+    50%{
+        right: 60%;
+    }
+
+    100%{
+        right: 20%;
+    }
+}
+.ex-13-button:hover .ex-13-top-white {
+    animation: buttonwhite2 2s linear;
+}
+@keyframes buttonwhite2{
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    30% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    30% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
 }
